changin from subscription to billing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-    kodus-subscription-service:
-        container_name: kodus-service-subscription
+    kodus-billing-service:
+        container_name: kodus-service-billing
         build:
             context: .
             dockerfile: DockerFiles/Dockerfile.dev
