--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "shx": "^0.3.4",
         "ts-node": "^10.9.2"
     },
-    "name": "kodus-service-subscription",
+    "name": "kodus-service-billing",
     "version": "1.0.0",
     "author": "malinosqui <gabrielmalinosqui@gmail.com>",
     "license": "MIT"
