fixing stripe webhook and docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
             - '9240:9240'
         restart: unless-stopped
         volumes:
-            - .:/app
+            - .:/usr/src/app
+            - /usr/src/app/node_modules
         environment:
             - NODE_ENV=development
         env_file:
