--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-# Environment
-NODE_ENV="development"
-
+NODE_ENV=
 LOG_LEVEL=
 LOG_PRETTY=
 
 # Server
-HOST=0.0.0.0
-PORT=3001
-RATE_MAX_REQUEST=100
-RATE_INTERVAL=1000
+HOST=
+PORT=
+RATE_MAX_REQUEST=
+RATE_INTERVAL=
 
 #Postgres
 DATABASE_ENV=
@@ -19,7 +17,15 @@ PG_DB_PASSWORD=
 PG_DB_DATABASE=
 PG_DB_SCHEMA=
 
+#STRIPE
 STRIPE_SECRET_KEY=
+STRIPE_PRICE_ID=
+STRIPE_WEBHOOK_SECRET=
+
 TRIAL_DURATION=
 CLOUD_TOKEN_SECRET=
-STRIPE_PRICE_ID=
+
+CORS_URLS=
+
+FRONTEND_URL=
+
