--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
         "helmet": "^8.0.0",
+        "node-cache": "^5.1.2",
         "node-cron": "^3.0.3",
         "pg": "^8.13.3",
         "reflect-metadata": "^0.2.2",
@@ -26,6 +27,7 @@
     "devDependencies": {
         "@types/express": "^5.0.0",
         "@types/node": "^22.7.4",
+        "@types/node-cache": "^4.2.5",
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
         "eslint": "^9.11.1",
