Fixing env variables

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ FRONTEND_URL=http://localhost:3001/success
 
 ADMIN_TOKEN=
 
+API_BILLING_HOSTNAME_API_ORCHESTRATOR=
+API_BILLING_PORT_API_ORCHESTRATOR=
+GLOBAL_API_CONTAINER_NAME=
