adding new plans

--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,43 @@
+# Database Configuration
 NODE_ENV=development
+PORT=3000
+PG_DB_HOST=localhost
+PG_DB_PORT=5432
+PG_DB_USERNAME=postgres
+PG_DB_PASSWORD=password
+PG_DB_DATABASE=kodus_billing
+PG_DB_SCHEMA=billing
 
-# Server
-PORT=
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
 
-#Postgres
-PG_DB_HOST=
-PG_DB_PORT=
-PG_DB_USERNAME=
-PG_DB_PASSWORD=
-PG_DB_DATABASE=
-PG_DB_SCHEMA=
+# Stripe Price IDs - Monthly Plans
+STRIPE_PRICE_ID=price_teams_managed_legacy
+STRIPE_PRICE_ID_TEAMS_BYOK=price_teams_byok_monthly
+STRIPE_PRICE_ID_TEAMS_MANAGED=price_teams_managed_monthly
+STRIPE_PRICE_ID_TEAMS_MANAGED_LEGACY=price_teams_managed_legacy
+STRIPE_PRICE_ID_ENTERPRISE_BYOK=price_enterprise_byok_monthly
+STRIPE_PRICE_ID_ENTERPRISE_MANAGED=price_enterprise_managed_monthly
 
-#STRIPE
-STRIPE_SECRET_KEY=
-STRIPE_PRICE_ID=
-STRIPE_WEBHOOK_SECRET=
+# Stripe Price IDs - Annual Plans (NOVOS)
+STRIPE_PRICE_ID_TEAMS_BYOK_ANNUAL=price_teams_byok_annual
+STRIPE_PRICE_ID_TEAMS_MANAGED_ANNUAL=price_teams_managed_annual
+STRIPE_PRICE_ID_ENTERPRISE_BYOK_ANNUAL=price_enterprise_byok_annual
+STRIPE_PRICE_ID_ENTERPRISE_MANAGED_ANNUAL=price_enterprise_managed_annual
 
-TRIAL_DURATION=
-CLOUD_TOKEN_SECRET=
+# Application Configuration
+TRIAL_DURATION=14
+CLOUD_TOKEN_SECRET=your_cloud_token_secret
+CORS_URLS=http://localhost:3000,http://localhost:3001
+FRONTEND_URL=http://localhost:3000
 
-CORS_URLS=http://localhost:3000|http://localhost:3001
+# API Configuration
+API_BILLING_NODE_ENV=development
+API_DATABASE_ENV=development
+ADMIN_TOKEN=your_admin_token
 
-FRONTEND_URL=http://localhost:3001/success
-
-ADMIN_TOKEN=
-
-API_BILLING_HOSTNAME_API_ORCHESTRATOR=
-API_BILLING_PORT_API_ORCHESTRATOR=
-GLOBAL_API_CONTAINER_NAME=
+# External APIs
+API_BILLING_HOSTNAME_API_ORCHESTRATOR=localhost
+API_BILLING_PORT_API_ORCHESTRATOR=3001
+GLOBAL_API_CONTAINER_NAME=kodus-api
