--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "helmet": "^8.1.0",
+        "ipaddr.js": "^2.2.0",
         "node-cache": "^5.1.2",
         "node-cron": "^4.2.1",
         "pg": "^8.16.3",
         "reflect-metadata": "^0.2.2",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0",
         "stripe": "^17.7.0",
         "typeorm": "^0.3.27",
         "uuid": "^13.0.0"
@@ -31,12 +34,15 @@
         "@types/express": "^5.0.5",
         "@types/node": "^24.10.0",
         "@types/node-cache": "^4.2.5",
+        "@redocly/cli": "^1.28.0",
         "@typescript-eslint/eslint-plugin": "^8.46.4",
         "@typescript-eslint/parser": "^8.46.4",
         "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
+        "newman": "^6.2.1",
         "nodemon": "^3.1.10",
+        "openapi-to-postmanv2": "^4.24.0",
         "prettier": "^3.6.2",
         "shx": "^0.4.0",
         "ts-node": "^10.9.2",
