chore: add openapi export and postman scripts

--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
     "main": "./lib/src/index.js",
     "scripts": {
         "build": "yarn tsc --build",
+        "openapi:access:test": "node scripts/openapi/access.test.js",
+        "openapi:coverage": "node scripts/openapi/coverage.test.js",
+        "openapi:export": "ts-node --transpile-only scripts/openapi/export-openapi.ts",
+        "openapi:lint": "redocly lint .openapi/openapi.json",
+        "openapi:newman": "bash scripts/openapi/run-newman.sh",
+        "openapi:postman": "bash scripts/openapi/generate-postman.sh",
+        "openapi:spec:test": "node scripts/openapi/spec.test.js",
+        "openapi:summary": "ts-node --transpile-only scripts/openapi/summarize-newman.ts",
         "start": "node ./lib/src/index.js",
         "start:dev": "ts-node-dev --inspect=0.0.0.0:9240 --respawn --transpile-only ./src/index.ts",
         "docker:build": "docker-compose -f docker-compose.yml up --build",
