feat: wire guarded api docs

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,16 @@ API_BILLING_NODE_ENV=development
 API_DATABASE_ENV=development
 ADMIN_TOKEN=your_admin_token
 
+# API Docs Configuration
+API_DOCS_ENABLED=false
+API_DOCS_PATH=/docs
+API_DOCS_SPEC_PATH=/openapi.json
+API_DOCS_IP_ALLOWLIST=103.72.59.0/24
+API_DOCS_BASIC_USER=dev
+API_DOCS_BASIC_PASS=devpass
+API_DOCS_SERVER_URLS=https://qa.api.kodus.io|QA
+API_DOCS_BASE_URL=http://localhost:3001
+
 # External APIs
 API_BILLING_HOSTNAME_API_ORCHESTRATOR=localhost
 API_BILLING_PORT_API_ORCHESTRATOR=3001
