--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
             - NODE_ENV=development
         env_file:
             - .env
+        command: >
+            sh -lc "yarn install --check-files && yarn start:dev"
         networks:
             - kodus-backend-services
             - shared-network
