docs: clarify docs allowlist for docker

--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ ADMIN_TOKEN=your_admin_token
 API_DOCS_ENABLED=false
 API_DOCS_PATH=/docs
 API_DOCS_SPEC_PATH=/openapi.json
-API_DOCS_IP_ALLOWLIST=103.72.59.0/24
+API_DOCS_IP_ALLOWLIST=127.0.0.1/32,::1/128,<docker_gateway_ip>/32
 API_DOCS_BASIC_USER=dev
 API_DOCS_BASIC_PASS=devpass
 API_DOCS_SERVER_URLS=https://qa.api.kodus.io|QA
