--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,7 @@ API_DOCS_BASIC_USER=dev
 API_DOCS_BASIC_PASS=devpass
 API_DOCS_SERVER_URLS=https://qa.api.kodus.io|QA
 API_DOCS_BASE_URL=http://localhost:3001
+API_DOCS_EXPORT_ALLOWLIST=localhost,127.0.0.1,::1,qa.api.kodus.io
 
 # External APIs
 API_BILLING_HOSTNAME_API_ORCHESTRATOR=localhost
