--- a/.github/workflows/prod-ec2-deploy.yml
+++ b/.github/workflows/prod-ec2-deploy.yml
@@ -9,6 +9,8 @@ jobs:
   build_and_push_image:
     name: Build and push image
     runs-on: ubuntu-latest
+    environment: PRODUCTION
+    if: github.event.release.prerelease == false
 
     steps:
       - name: Checkout code
@@ -42,6 +44,7 @@ jobs:
   deploy_in_server:
     name: Deploy in server
     runs-on: ubuntu-latest
+    environment: PRODUCTION
     needs: build_and_push_image
 
     steps:
