ci(qa): add QA environment to workflow jobs

--- a/.github/workflows/qa-ec2-deploy.yml
+++ b/.github/workflows/qa-ec2-deploy.yml
@@ -9,6 +9,7 @@ jobs:
   build_and_push_image:
     name: Build and push image
     runs-on: ubuntu-latest
+    environment: QA
 
     steps:
       - name: Checkout code
@@ -42,6 +43,7 @@ jobs:
   deploy_in_server:
     name: Deploy in server
     runs-on: ubuntu-latest
+    environment: QA
     needs: build_and_push_image
 
     steps:
