--- a/.github/workflows/prod-ec2-deploy.yml
+++ b/.github/workflows/prod-ec2-deploy.yml
@@ -5,6 +5,9 @@ on:
     types:
       - published
 
+permissions:
+  contents: read
+
 jobs:
   build_and_push_image:
     name: Build and push image
