--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
     "main": "./lib/src/index.js",
+    "resolutions": {
+        "qs": "^6.14.1",
+        "node-forge": "^1.3.2",
+        "lodash": "^4.17.23",
+        "glob": "^10.5.0",
+        "js-yaml": "^4.1.1",
+        "brace-expansion": "^2.0.2",
+        "body-parser": "^2.2.2"
+    },
     "scripts": {
         "build": "yarn tsc --build",
         "openapi:access:test": "node scripts/openapi/access.test.js",
@@ -22,36 +31,37 @@
         "migration:revert": "npx typeorm-ts-node-commonjs migration:revert -d src/config/database.ts"
     },
     "dependencies": {
-        "axios": "^1.13.2",
-        "cors": "^2.8.5",
-        "dotenv": "^17.2.3",
-        "express": "^5.1.0",
+        "axios": "^1.13.5",
+        "cors": "^2.8.6",
+        "dotenv": "^17.2.4",
+        "express": "^5.2.1",
+        "express-rate-limit": "^8.2.1",
         "helmet": "^8.1.0",
-        "ipaddr.js": "^2.2.0",
+        "ipaddr.js": "^2.3.0",
         "node-cache": "^5.1.2",
         "node-cron": "^4.2.1",
         "pg": "^8.16.3",
         "reflect-metadata": "^0.2.2",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.0",
+        "swagger-ui-express": "^5.0.1",
         "stripe": "^17.7.0",
-        "typeorm": "^0.3.27",
+        "typeorm": "^0.3.28",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
-        "@types/express": "^5.0.5",
-        "@types/node": "^24.10.0",
+        "@types/express": "^5.0.6",
+        "@types/node": "^25.2.3",
         "@types/node-cache": "^4.2.5",
-        "@redocly/cli": "^1.28.0",
-        "@typescript-eslint/eslint-plugin": "^8.46.4",
-        "@typescript-eslint/parser": "^8.46.4",
-        "eslint": "^9.39.1",
+        "@redocly/cli": "^2.18.0",
+        "@typescript-eslint/eslint-plugin": "^8.55.0",
+        "@typescript-eslint/parser": "^8.55.0",
+        "eslint": "^10.0.0",
         "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-prettier": "^5.5.4",
-        "newman": "^6.2.1",
-        "nodemon": "^3.1.10",
-        "openapi-to-postmanv2": "^4.24.0",
-        "prettier": "^3.6.2",
+        "eslint-plugin-prettier": "^5.5.5",
+        "newman": "^6.2.2",
+        "nodemon": "^3.1.11",
+        "openapi-to-postmanv2": "^6.0.0",
+        "prettier": "^3.8.1",
         "shx": "^0.4.0",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
